[tool.poetry]
name = "data-scraper"
version = "0.1.0"
description = ""
authors = ["Nate Ferreira <nferreira1729@gmail.com>"]
readme = "README.md"
packages = [{include = "data_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
